--- a/manifest/complete-demo.yaml
+++ b/manifest/complete-demo.yaml
@@ -13,6 +13,8 @@ spec:
     metadata:
       labels:
         name: carts-db
+      annotations:
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: carts-db
@@ -68,6 +70,8 @@ spec:
     metadata:
       labels:
         name: carts
+      annotations:
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: carts
@@ -126,6 +130,8 @@ spec:
     metadata:
       labels:
         name: catalogue-db
+      annotations:
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: catalogue-db
@@ -178,6 +184,8 @@ spec:
     metadata:
       labels:
         name: catalogue
+      annotations:
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: catalogue
@@ -219,6 +227,8 @@ spec:
       labels:
         name: front-end
         version: v1
+      annotations:
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: front-end
@@ -274,6 +284,8 @@ spec:
     metadata:
       labels:
         name: orders-db
+      annotations:
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: orders-db
@@ -329,6 +341,8 @@ spec:
     metadata:
       labels:
         name: orders
+      annotations:
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: orders
@@ -381,6 +395,8 @@ spec:
     metadata:
       labels:
         name: payment
+      annotations:
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: payment
@@ -422,6 +438,8 @@ spec:
     metadata:
       labels:
         name: queue-master
+      annotations:
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: queue-master
@@ -462,6 +480,8 @@ spec:
     metadata:
       labels:
         name: rabbitmq
+      annotations:
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: rabbitmq
@@ -503,6 +523,8 @@ spec:
     metadata:
       labels:
         name: shipping
+      annotations:
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: shipping
@@ -553,6 +575,8 @@ spec:
     metadata:
       labels:
         name: user-db
+      annotations:
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: user-db
@@ -613,6 +637,8 @@ spec:
     metadata:
       labels:
         name: user
+      annotations:
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: user
