--- a/manifest/complete-demo.yaml
+++ b/manifest/complete-demo.yaml
@@ -232,7 +232,7 @@ spec:
     spec:
       containers:
       - name: front-end
-        image: mosuke5/front-end:master-7ad6254
+        image: dlsurf/front-end-x86:v1.0
         ports:
         - containerPort: 8079
       nodeSelector:
