--- a/manifest/front-end-virtualservice.yaml
+++ b/manifest/front-end-virtualservice.yaml
@@ -16,3 +16,11 @@ spec:
         port:
           number: 80
         host: front-end.sock-shop.svc.cluster.local
+        subset: v1
+      weight: 80
+    - destination:
+        port:
+          number: 80
+        host: front-end.sock-shop.svc.cluster.local
+        subset: v2
+      weight: 20
