--- a/manifest/front-end-destinationrule.yaml
+++ b/manifest/front-end-destinationrule.yaml
@@ -3,7 +3,7 @@ kind: DestinationRule
 metadata:
   name: front-end
 spec:
-  host: front-end.sock-shop.svc.cluster.local
+  host: front-end.sockshop.svc.cluster.local
   subsets:
     - name: v1
       labels:
