--- a/manifest/gateway.yaml
+++ b/manifest/gateway.yaml
@@ -11,4 +11,4 @@ spec:
       name: http
       protocol: HTTP
     hosts:
-    - "*.itzroks-120000nskq-zvh0r8-6ccd7f378ae819553d37d5f2ee142bd6-0000.jp-tok.containers.appdomain.cloud"
+    - "*.itzroks-120000nskq-d0gq0n-6ccd7f378ae819553d37d5f2ee142bd6-0000.us-south.containers.appdomain.cloud"
