--- a/manifest/complete-demo.yaml
+++ b/manifest/complete-demo.yaml
@@ -233,6 +233,7 @@ spec:
       containers:
       - name: front-end
         image: dlsurf/front-end-x86:v1.0
+        imagePullPolicy: Always
         ports:
         - containerPort: 8079
       nodeSelector:
